force-app/main/default/objects/EmailConfiguration__c/EmailConfiguration__c.object-meta.xml
<CustomObject>
    <description>Holds the details of emails that is used to drive automation and business validation.</description>
    <label>Email Configuration</label>
    <nameField>
        <label>Email Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>