force-app/main/default/objects/EmailConfiguration__c/fields/AwaitReply__c.field-meta.xml
<CustomField>
    <fullName>AwaitReply__c</fullName>
    <description>Determines whether the related email case should be closed after the related email message using this template is sent. If no reply is expected, the email case is auto closed when the template is sent using the Email Message | Outbound flow. Field was re-labeled for business users to view on Manage email templates page.</description>
    <label>Close after sent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Await a reply</fullName>
            </value>
            <value>
                <fullName>No reply expected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>