force-app/main/default/objects/EmailConfiguration__c/fields/ClientsAddressed__c.field-meta.xml
<CustomField>
    <fullName>ClientsAddressed__c</fullName>
    <description>Indicates if one or both clients should be included in an email</description>
    <label>Clients addressed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>One only</fullName>
            </value>
            <value>
                <fullName>User defined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>