force-app/main/default/objects/EmailConfiguration__c/fields/CloseAfterSend__c.field-meta.xml
<CustomField>
    <fullName>CloseAfterSend__c</fullName>
    <description>Indicates if the email case should be closed after an email using this template is sent. If it should be closed, the Email Message | Outbound created or updated flow will close the related case once the email status is &#39;sent&#39;</description>
    <label>Close after send</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>