force-app/main/default/objects/EmailConfiguration__c/fields/CopyOtherClients__c.field-meta.xml
<CustomField>
    <fullName>CopyOtherClients__c</fullName>
    <description>Indicates whether, if this email is only sent to one client, other clients from the household should be copied in</description>
    <label>Copy other clients</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ClientsAddressed__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALWAYS</fullName>
                <label>Always</label>
            </value>
            <value>
                <fullName>NEVER</fullName>
                <label>Never</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>