force-app/main/default/objects/EmailConfiguration__c/fields/CustomPermission__c.field-meta.xml
<CustomField>
    <fullName>CustomPermission__c</fullName>
    <description>If this field has a value, a user must have this custom permission order to send an email of this type</description>
    <inlineHelpText>If this field has a value, a user must have this custom permission order to send an email of this type</inlineHelpText>
    <label>Custom permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>