force-app/main/default/objects/EmailConfiguration__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <description>The developer name of the email template this email configuration is associated with.</description>
    <externalId>true</externalId>
    <inlineHelpText>Must match the developer name of the email template.</inlineHelpText>
    <label>Developer Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>