force-app/main/default/objects/EmailConfiguration__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <description>The email address this email message must come from.</description>
    <label>From</label>
    <required>true</required>
    <type>Email</type>
</CustomField>