force-app/main/default/objects/EmailConfiguration__c/fields/GoogleDriveTemplateUrl__c.field-meta.xml
<CustomField>
    <fullName>GoogleDriveTemplateUrl__c</fullName>
    <description>Link to template listed in Google Drive.</description>
    <label>Google drive template URL</label>
    <type>Url</type>
</CustomField>