force-app/main/default/objects/EmailConfiguration__c/fields/HasAttachment__c.field-meta.xml
<CustomField>
    <fullName>HasAttachment__c</fullName>
    <description>Does this template include an attachment?</description>
    <label>Has attachment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>