force-app/main/default/objects/EmailConfiguration__c/fields/Necessity__c.field-meta.xml
<CustomField>
    <fullName>Necessity__c</fullName>
    <label>Necessity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>