force-app/main/default/objects/EmailConfiguration__c/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>The name of the object that this email is created against, which allows for merge fields to be calculated if relevant.</description>
    <label>Object name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>