force-app/main/default/objects/EmailConfiguration__c/fields/PartnerCopied__c.field-meta.xml
<CustomField>
    <fullName>PartnerCopied__c</fullName>
    <description>Indicates if partner should be copied into an email of this type</description>
    <label>Partner copied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>