force-app/main/default/objects/EmailConfiguration__c/fields/ReplyTo__c.field-meta.xml
<CustomField>
    <fullName>ReplyTo__c</fullName>
    <description>If specified, a distinct reply to email address to be used for this email. Note that this will only work on automatically sent emails.</description>
    <label>Reply to</label>
    <type>Email</type>
</CustomField>