force-app/main/default/objects/EmailConfiguration__c/fields/ReviewAtTaxYearEnd__c.field-meta.xml
<CustomField>
    <fullName>ReviewAtTaxYearEnd__c</fullName>
    <description>Does template contain TYE sensitive information such as deadlines, specific dates etc. to be reviewed every tax year end</description>
    <label>Review at tax year end</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>