force-app/main/default/objects/EmailConfiguration__c/fields/ReviewCalendarYearDates__c.field-meta.xml
<CustomField>
    <fullName>ReviewCalendarYearDates__c</fullName>
    <description>Indicates whether this template references the calendar year and should be flagged for update every December?</description>
    <label>Review calendar year dates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>