force-app/main/default/objects/EmailConfiguration__c/fields/ReviewFiscalYearDates__c.field-meta.xml
<CustomField>
    <fullName>ReviewFiscalYearDates__c</fullName>
    <description>Does this template reference fiscal years that need to be changed in December?</description>
    <label>Review fiscal year dates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>