force-app/main/default/objects/EmailConfiguration__c/fields/SendingProcess__c.field-meta.xml
<CustomField>
    <fullName>SendingProcess__c</fullName>
    <description>Captures whether this is an automatically or manually set email template.</description>
    <label>Sending process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUTOMATIC</fullName>
                <label>Automatic</label>
            </value>
            <value>
                <fullName>MANUAL</fullName>
                <label>Manual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>