force-app/main/default/objects/EmailConfiguration__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>The subject that should be used in this email</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>