force-app/main/default/objects/EmailConfiguration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DeveloperName__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>From__c</columns>
    <columns>CustomPermission__c</columns>
    <columns>ClientsAddressed__c</columns>
    <columns>PartnerCopied__c</columns>
    <columns>Type__c</columns>
    <columns>Necessity__c</columns>
    <columns>GoogleDriveTemplateUrl__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>